--- a/css/corgi.css
+++ b/css/corgi.css
@@ -146,6 +146,9 @@ img::selection {
 a::selection {
 	background-color: #fff2a8;
 }
+.footer_link {
+	color: #E29C54;
+}
 @media  (max-width: 1024px) {
 	body {
 		width: 80%;
