--- a/css/corgi.css
+++ b/css/corgi.css
@@ -146,8 +146,14 @@ img::selection {
 a::selection {
 	background-color: #fff2a8;
 }
-a {
-	color: #E29C54;
+.mail a{
+    color: #E29C54;
+    text-decoration: none;
+}
+.mail a:hover{
+    color: #E29C54;
+    text-decoration: underline;
+
 }
 @media  (max-width: 1024px) {
 	body {
