--- a/css/corgi.css
+++ b/css/corgi.css
@@ -121,7 +121,6 @@ body {
 }
 a {
 	color: #1c1c1c;
-	text-decoration: none;
 }
 p::selection {
 	background-color: #fff2a8;
@@ -149,10 +148,16 @@ a::selection {
 }
 .mail a {
     color: #E29C54;
+	text-decoration: none;
 }
 .mail:hover a {
     color: #E29C54;
     text-decoration: underline;
+}
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: none;
 }
 @media  (max-width: 1024px) {
 	body {
