--- a/css/corgi.css
+++ b/css/corgi.css
@@ -148,6 +148,11 @@ a::selection {
 }
 .mail a {
     color: #E29C54;
+    text-decoration: none;
+}
+.mail a:hover {
+    color: #E29C54;
+    text-decoration: underline;
 }
 @media  (max-width: 1024px) {
 	body {
