--- a/css/corgi.css
+++ b/css/corgi.css
@@ -119,9 +119,9 @@ body {
 .section {
 	margin-bottom: 50px;
 }
-/* a {
+a {
 	color: #1c1c1c;
-} */
+}
 p::selection {
 	background-color: #fff2a8;
 }
@@ -143,16 +143,8 @@ li::selection {
 img::selection {
 	background-color: #fff2a8;
 }
-/* a::selection {
+a::selection {
 	background-color: #fff2a8;
-} */
-.mail a{
-    color: #B54172;
-    text-decoration: none;
-}
-.mail a:hover{
-    color: #B54172;
-    text-decoration: underline;
 }
 @media  (max-width: 1024px) {
 	body {
