--- a/css/corgi.css
+++ b/css/corgi.css
@@ -146,7 +146,7 @@ img::selection {
 a::selection {
 	background-color: #fff2a8;
 }
-.mail {
+.footer {
 	margin-bottom: 20px;
 }
 @media  (max-width: 1024px) {
